<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/enter_text"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="#FFFFFFFF">

   <TextView
        android:id="@+id/enter_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment" 
        android:layout_margin="6dp" 
        android:textSize="14dp"/>

    <EditText
        android:id="@+id/enter_text_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine|textCapSentences"
        android:minHeight="100dp" 
        android:gravity="bottom" android:layout_margin="5dp"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     	android:padding="5dp" >

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send" android:layout_weight="1"/>

                <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>